<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">心狗妇温宝</string>
    <string name="hello_world">Hello world!</string>

	<string name="menu_settings">Settings</string>
    <string name="app_version">1.0.1</string>
    <string name="update">检查更新</string>
     <string name="login_name">姓名</string>
     <string name="login_password">密码</string>
     <string name="text_notification">通知与消息</string>
      <string name="text_privacy">隐私</string>
    <string name="text_general">通用</string>
    <string name="text_about">关于心狗妇温宝</string>
    <string name="mianze">免责声明</string>
    <string name="timu">狗-心脏守护</string>
     <string name="kaimen">开启心脏守护之旅</string>
     <string name="tiyan">体验一下</string>
     <string name="timu1">心狗-健康守护专家,是一款便携式监测和诊断心脏疾病的智能产品,本产品配合手机APP可随时随地监测您的心脏健康状态，并生成健康趋势预测和判断您未来心脏状态，还可以将数据发送云端指定医生更为详细的咨询。</string>
     <string name="banquan">夏先科技 出品</string>
     <string name="lianxi">021–34639089</string>
     <string name="login">账户登陆</string>
     <string name="register">账户注册</string>
     <string name="jiance">检测</string>
     <string name="lishi">历史记录</string>
     <string name="faxian">发现</string>
     <string name="shezhi">设置</string>
     <string name="kaishijiance">开始检测</string>
     <string name="ljstate">设备已连接</string>
     <string name="ljstate1">设备正在连接...</string>
     <string name="ljstate2">设备未连接</string>
     <string name="clear_cache">清空缓存</string>
     <string name="logout">退出登录</string>
     <string name="txt_login">登录</string>
     <string name="txt_RES">注册</string>
     <string name="ecgname">心电</string>
     <string name="blname">血压</string>
     <string name="bxname">血氧</string>
     <string name="txt_jiance">检测</string>
     <string name="txt_qushi">趋势</string>
     <string name="txt_yiliao">医疗</string>
     <string name="txt_shezhi">设置</string>
   <string name="modify">密码修改</string>
     <string name="modify_PWD1">新密码</string>
     <string name="modify_PWD2">新密码确认</string>
     <string name="modify_PWD3">修改</string>
          <string name="txt_dxxl">窦性心律</string>
     <string name="txt_dxtb">窦性停搏</string>
     <string name="txt_dxxdgs">窦性心动过速</string>
     <string name="txt_dxxdgh">窦性心动过缓</string>
     <string name="txt_dxxlbq">窦性心律不齐</string>
     <string name="txt_zcdxxl">正常窦性心律</string>
     <string name="txt_zb">早搏</string>
     <string name="txt_fxzb">房性早搏</string>
     <string name="txt_jxxzb">交界性早搏</string>
     <string name="txt_sxzb">室性早搏</string>
     <string name="txt_zbyf">早搏预防</string>
     <string name="txt_mcjs">名词解释</string>
     <string name="user_guid">使用说明</string>
     <string name="user_fxxlsc">房性心律失常</string>
     <string name="user_fxbxxl">房性并行心律</string>
     <string name="user_fxxdgs">房性心动过速</string>
     <string name="user_xfpd">心房扑动</string>   
     <string name="user_xfxc">心房纤颤</string>
     <string name="user_sxxlsc">室性心律失常</string> 
     <string name="user_sxyb">室性逸搏</string>
     <string name="user_sxbxxl">室性并行心律</string>
     <string name="user_sxxdgs">室性心动过速</string>
     <string name="user_xsxc">心室纤颤</string>
     <string name="user_jjxxlsc">交界性心律失常</string>
     <string name="user_jjxyb">交界性逸搏</string>
     <string name="user_jjxbxxl">交界性并行心律</string>
     <string name="user_fzfxxjjqxdgs">非阵发性交界区心动过速</string>
     <string name="user_wxzxxjjqxdgs">无休止性交界区心动过速</string>
     <string name="user_sncdzu">室内传导阻滞</string>
     <string name="user_fzcdzz">分支传导阻滞</string>
     <string name="user_sfzcdzz">双分支传导阻滞</string>
     <string name="user_scszcdzz">双侧束支传导阻滞</string>
     <string name="user_szcdzz">束支传导阻滞</string>
     <string name="user_fxyb">房性逸搏</string>
     <string name="user_xspd">心室扑动</string>
     <string name="user_fsjfxxdgs">房室结返性心动过速</string>
     <string name="user_bloodpre">血压</string>
     <string name="user_bloodpre1">血压常识</string>
     <string name="user_bloodpre2">血压仪帮助</string>
     <string name="user_bloodpre3">指导</string>
    
     <string name="zhou">周</string>
     <string name="yue">月</string>
     <string name="ji">季</string>
     <string name="nian">年</string>
     <string name="his_cx">查询</string>
     <string name="guanyu">关于心狗妇温宝</string>
     <string name="tiaokuan">使用条款</string>
     
     <string name="toggle_ON">画图打开</string>
     <string name="toggle_OFF">画图关闭</string>
         <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="height_data">高压：</string>
    <string name="low_data">低压：</string>
    <string name="heart_data">心率：</string>
    <string name="no_data">0°C</string>
</resources>
