<?xml version="1.0" encoding="utf-8"?>

<LinearLayout 
   xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical" >
    
     <LinearLayout
        android:id="@+id/linearLayouttitle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:background="#1e1d1d"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/qianlvse" >
            
                      <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="设置"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />
           
        </RelativeLayout>
</LinearLayout>
    
    <LinearLayout
        android:id="@+id/layout_CONTENT"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/table_background"
        android:orientation="vertical"
        android:padding="@dimen/content_padding" >
        
        <LinearLayout
            android:id="@+id/layout_TABLE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/table_margin"
            android:background="@color/table_background"
            android:padding="@dimen/table_padding" >

            <RelativeLayout
                android:id="@+id/layout_account"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:background="@drawable/row_selector"
                android:paddingLeft="@dimen/row_padding_left"
                android:paddingRight="@dimen/row_padding_right" >

                <TextView
                    style="@style/text_black_18"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_setting_account"
                    android:drawablePadding="4dp"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="密码修改"
                    android:textColor="@color/qianlvse" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:src="@drawable/go" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_TABLE1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/table_margin"
            android:background="@color/table_background"
            android:orientation="vertical"
            android:padding="@dimen/table_padding" >

            <RelativeLayout
                android:id="@+id/layout_userguid"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:background="@drawable/row_selector"
                android:paddingLeft="@dimen/row_padding_left"
                android:paddingRight="@dimen/row_padding_right" >

                <TextView
                    style="@style/text_black_18"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_setting_general"
                    android:drawablePadding="4dp"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="@string/user_guid"
                    android:textColor="@color/qianlvse" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:src="@drawable/go" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_TABLE2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/table_margin"
            android:background="@color/table_background"
            android:padding="@dimen/table_padding" >

            <RelativeLayout
                android:id="@+id/layout_about"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:background="@drawable/row_selector"
                android:paddingLeft="@dimen/row_padding_left"
                android:paddingRight="@dimen/row_padding_right" >

                <TextView
                    style="@style/text_black_18"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_setting_about"
                    android:drawablePadding="4dp"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="@string/text_about"
                    android:textColor="@color/qianlvse" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:src="@drawable/go" />
            </RelativeLayout>
        </LinearLayout>
		
         <LinearLayout
            android:id="@+id/layout_TABLE21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/table_margin"
            android:background="@color/table_background"
            android:padding="@dimen/table_padding" >

            <RelativeLayout
                android:id="@+id/layout_mianze"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:background="@drawable/row_selector"
                android:paddingLeft="@dimen/row_padding_left"
                android:paddingRight="@dimen/row_padding_right" >

                <TextView
                    style="@style/text_black_18"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_setting_notification"
                    android:drawablePadding="4dp"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="@string/mianze"
                    android:textColor="@color/qianlvse" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:src="@drawable/go" />
            </RelativeLayout>
        </LinearLayout>
       
        <LinearLayout
            android:id="@+id/layout_TABLE21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/table_margin"
            android:background="@color/table_background"
            android:padding="@dimen/table_padding" >

            <RelativeLayout
                android:id="@+id/layout_updateapk"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:background="@drawable/row_selector"
                android:paddingLeft="@dimen/row_padding_left"
                android:paddingRight="@dimen/row_padding_right" >

                <TextView
                    style="@style/text_black_18"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_setting_about"
                    android:drawablePadding="4dp"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="@string/update"
                    android:textColor="@color/qianlvse" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:src="@drawable/go" />
            </RelativeLayout>
        </LinearLayout>
        
         
        <LinearLayout
            android:id="@+id/layout_TABLE3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
           
            <Button
                android:id="@+id/layout_exit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:textSize="20sp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                style="@style/tongyong"
                android:gravity="center_vertical|center"
                android:text="退出"
                android:textColor="@color/light_white" />

        </LinearLayout>

        

    </LinearLayout>

</LinearLayout>